src/test/ui/inference/cannot-infer-closure-circular.stderr
error[E0282]: type annotations needed for `Result<(), E>`
  --> $DIR/cannot-infer-closure-circular.rs:12:9
   |
LL |     let _ = x(x(Ok(())));
   |         ^
   |
help: consider giving this pattern a type, where the type for type parameter `E` is specified
   |
LL |     let _: Result<(), E> = x(x(Ok(())));
   |          +++++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
